--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "default": "npx projen default",
     "docgen": "npx projen docgen",
     "eject": "npx projen eject",
-    "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:js": "npx projen package:js",
@@ -22,7 +21,6 @@
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
     "test": "npx projen test",
-    "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
@@ -35,77 +33,26 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
-    "@types/jest": "^29.5.11",
     "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
     "constructs": "^10.0.0",
-    "eslint": "^8",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "fs-extra": "^11.2.0",
-    "glob": "^10.3.10",
-    "jest": "^29.7.0",
-    "jest-junit": "^15",
-    "jsii": "5.2.x",
+    "fs-extra": "^9.1.0",
+    "glob": "^7.2.3",
+    "jsii": "5.0.14",
     "jsii-diff": "^1.93.0",
     "jsii-docgen": "^10.3.3",
     "jsii-pacmak": "^1.93.0",
-    "jsii-rosetta": "5.2.x",
-    "projen": "^0.78.2",
+    "jsii-rosetta": "5.0.14",
+    "projen": "0.78.2",
     "standard-version": "^9",
-    "ts-jest": "^29.1.1",
     "ts-node": "7.0.1",
     "typescript": "5.2.x"
   },
   "peerDependencies": {
-    "projen": "^0.78.8"
+    "projen": "0.78.2"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "version": "0.0.0",
-  "jest": {
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
-    ],
-    "clearMocks": true,
-    "collectCoverage": true,
-    "coverageReporters": [
-      "json",
-      "lcov",
-      "clover",
-      "cobertura",
-      "text"
-    ],
-    "coverageDirectory": "coverage",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "watchPathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "reporters": [
-      "default",
-      [
-        "jest-junit",
-        {
-          "outputDirectory": "test-reports"
-        }
-      ]
-    ],
-    "transform": {
-      "^.+\\.[t]sx?$": [
-        "ts-jest",
-        {
-          "tsconfig": "tsconfig.dev.json"
-        }
-      ]
-    }
-  },
   "types": "lib/index.d.ts",
   "stability": "stable",
   "jsii": {
