--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 !/.projen/deps.json
 !/.projen/files.json
 !/.github/workflows/pull-request-lint.yml
-!/.github/workflows/auto-approve.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -36,14 +35,14 @@ jspm_packages/
 /dist/changelog.md
 /dist/version.txt
 !/.github/workflows/release.yml
-!/.mergify.yml
-!/.github/workflows/upgrade-master.yml
 !/.github/pull_request_template.md
 !/test/
 !/tsconfig.dev.json
 !/src/
 /lib
 /dist/
+!/.eslintrc.json
 .jsii
 tsconfig.json
 !/API.md
+!/package-lock.json
