--- a/.npmignore
+++ b/.npmignore
@@ -3,7 +3,6 @@
 permissions-backup.acl
 /dist/changelog.md
 /dist/version.txt
-/.mergify.yml
 /test/
 /tsconfig.dev.json
 /src/
@@ -17,4 +16,5 @@ dist
 /.idea/
 /.projenrc.js
 tsconfig.tsbuildinfo
+/.eslintrc.json
 !.jsii
