--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 /.github/workflows/release.yml linguist-generated
 /.gitignore linguist-generated
 /.npmignore linguist-generated
+/.nvmrc linguist-generated
 /.projen/** linguist-generated
 /.projen/deps.json linguist-generated
 /.projen/files.json linguist-generated
