--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
-
    "extends": "@silvermine/eslint-config/node",
-   "root": true
-
+   "root": true,
+   "ignorePatterns": [
+      "lib",
+      ".projen",
+      "dist"
+   ]
 }
