--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "unbump": "npx projen unbump",
     "watch": "npx projen watch",
     "projen": "npx projen",
+    "commitlint": "commitlint --from e736715",
+    "markdownlint": "markdownlint-cli2",
+    "eslint": "eslint .",
+    "standards": "npm run commitlint && npm run eslint && npm run markdownlint",
     "release:preview": "node ./node_modules/@silvermine/standardization/scripts/release.js preview",
     "release:prep-changelog": "node ./node_modules/@silvermine/standardization/scripts/release.js prep-changelog",
     "release:finalize": "node ./node_modules/@silvermine/standardization/scripts/release.js finalize"
@@ -34,10 +38,11 @@
     "organization": false
   },
   "devDependencies": {
+    "@commitlint/cli": "12.1.1",
     "@silvermine/chai-strictly-equal": "1.1.0",
     "@silvermine/eslint-config": "git+https://github.com/silvermine/eslint-config-silvermine#fa9925f9de6b8139d42781dbd002b4024318744a",
     "@silvermine/eslint-plugin-silvermine": "2.4.0",
-    "@silvermine/standardization": "2.0.0",
+    "@silvermine/standardization": "2.2.2",
     "@silvermine/typescript-config": "git+https://github.com/silvermine/typescript-config#23213e33077089e723629dead5342abe6f3b3c8c",
     "@types/chai": "4.1.7",
     "@types/fs-extra": "^11.0.4",
@@ -58,6 +63,7 @@
     "jsii-docgen": "^10.3.3",
     "jsii-pacmak": "^1.93.0",
     "jsii-rosetta": "5.0.14",
+    "markdownlint-cli2": "0.7.1",
     "mocha": "5.2.0",
     "nyc": "13.1.0",
     "projen": "0.78.0",
