chore: update commit lint command to auto resolve commits

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "unbump": "npx projen unbump",
     "watch": "npx projen watch",
     "projen": "npx projen",
-    "commitlint": "commitlint --from e736715",
+    "commitlint": "commitlint --from $(git log -1 --skip=-20 --pretty=format:\"%h\" --no-patch)",
     "markdownlint": "markdownlint-cli2",
     "eslint": "eslint .",
     "standards": "npm run commitlint && npm run eslint && npm run markdownlint",
