--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/projen-silvermine.git"
   },
   "scripts": {
-    "build": "npm run build:types && npm run build:esm && npm run build:commonjs",
+    "build": "",
     "bump": "npx projen bump",
     "clobber": "npx projen clobber",
     "compat": "npx projen compat",
@@ -50,7 +50,7 @@
     "@types/chai": "4.1.7",
     "@types/fs-extra": "^11.0.4",
     "@types/mocha": "5.2.5",
-    "@types/node": "12.20.45",
+    "@types/node": "16.11.43",
     "@types/sinon": "5.0.5",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
