--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ name: build
 on:
   pull_request: {}
   workflow_dispatch: {}
-  push: {}
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,14 +25,8 @@ jobs:
           node-version: 16.15.0
       - name: Install dependencies
         run: npm install
-      - name: standards
-        run: npm run standards
-      - name: test
-        run: npm test
       - name: build
-        run: npm run build
-      - name: projen
-        run: npx projen
+        run: npx projen build
       - name: Find mutations
         id: self_mutation
         run: |-
