--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "eslint": "8.16.0",
     "fs-extra": "^9.1.0",
     "glob": "^7.2.3",
-    "jsii": "5.0.14",
+    "jsii": "1.x",
     "jsii-diff": "^1.93.0",
     "jsii-docgen": "^10.3.3",
     "jsii-pacmak": "^1.93.0",
-    "jsii-rosetta": "5.0.14",
+    "jsii-rosetta": "1.x",
     "markdownlint-cli2": "0.7.1",
     "mocha": "5.2.0",
     "nyc": "13.1.0",
@@ -73,6 +73,10 @@
   "peerDependencies": {
     "constructs": "10.3.0",
     "projen": ">=0.78.x"
+  },
+  "overrides": {
+    "@types/babel__traverse": "7.18.2",
+    "@types/prettier": "2.6.0"
   },
   "engines": {
     "node": ">= 16.15.0 <= 16.15.0"
