--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 /.github/workflows/pull-request-lint.yml linguist-generated
 /.github/workflows/release.yml linguist-generated
 /.gitignore linguist-generated
+/.mergify.yml linguist-generated
 /.npmignore linguist-generated
 /.nvmrc linguist-generated
 /.projen/** linguist-generated
