--- a/.npmignore
+++ b/.npmignore
@@ -6,6 +6,7 @@ permissions-backup.acl
 /.mergify.yml
 /test/
 /tsconfig.dev.json
+/src/
 !/lib/
 !/lib/**/*.js
 !/lib/**/*.d.ts
@@ -17,4 +18,3 @@ dist
 /.projenrc.js
 tsconfig.tsbuildinfo
 !.jsii
-!/src/
